/***********************************************************************
X3 ChangeLog

2007-03-20  Alex Schumann  <rubin@afternet.org>
 
        * src/nickserv.c: fix trying to do ldap when not enabled during
	cmd_register + also with cmd_unregister

2007-03-20  Alex Schumann  <rubin@afternet.org>

        * src/opserv.c: fix for stats alerts filtering

	* src/chanserv.c: dont kick lamers if they are currently exempt (+e) 

	* src/x3ldap.c: fix ldap error code to string

	* src/nickserv.c: (comment to add LOC logging)

2007-02-26  Alex Schumann  <rubin@afternet.org>

	* src/nickserv.c: fix bug with LOC logic and ldap.

2007-02-13  Alex Schumann  <rubin@afternet.org>

	* src/nickserv.c: Fix bugs with ldap cookies. Fix opt_password
	warning/crash potential

2007-02-13  Alex Schumann  <rubin@afternet.org>

	* src/x3ldap.c: Fix double-hashing of passwords when using ldap and
	resetpass cookie system. 

	* src/nickserv.c: Fix double-hashing of passwords when using ldap and
	resetpass cookie system. Fix incorrect terms in ldap email error
	message.

2007-02-12  Alex Schumann  <rubin@afternet.org>

	* src/x3ldap.c: fix ldap_delete not binding first, so causing
	access denied sometimes.

2007-02-12  Alex Schumann  <rubin@afternet.org>

	* x3.conf.example: fix ldap config example so it actually works

2007-02-12  Alex Schumann  <rubin@afternet.org>

	* src/nickserv.h: lowercase account name setting

	* x3.conf.example: lowercase account name setting

	* src/nickservc: only lowercase account names if the option is set.

2007-02-12  Alex Schumann  <rubin@afternet.org>

	* src/tools.c: adding ircd_strtolower() func

	* src/common.h: adding ircd_strtolower() func

	* src/nickserv.c: force accounts to lowercase at all inputs. ++fix
	warning ++fix another

2007-02-11  Alex Schumann  <rubin@afternet.org>

	* src/nickserv.c: fixed a bunch of ldap result value check bugs

2007-02-11  Alex Schumann  <rubin@afternet.org>

	* src/opserv.c: Added oper group support to ldap
