@@ -2,6 +2,11 @@
 X3 ChangeLog
 
 2007-03-20  Alex Schumann  <rubin@afternet.org>
+
+	* src/nickserv.c: applied patch from playa which fixes the nickname
+	valid checks when registering a nick.
+
+2007-03-20  Alex Schumann  <rubin@afternet.org>
  
         * src/nickserv.c: fix trying to do ldap when not enabled during
 	cmd_register + also with cmd_unregister
